# insighta-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
insighta/: api.py  auth.py  display.py  main.py
