[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "insighta"
version = "1.0.0"
description = "CLI for Insighta Labs — explore and manage profile data."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "flake8>=7.0",
    "build>=1.0",
]

[project.scripts]
insighta = "insighta.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["insighta*"]
